<resources>
    <string name="app_name">Game</string>
    <string name="url">https://www.google.com/</string>
    <string name="app_bundle">com.zhiliaoapp.musically</string>
    <string name="x_apisports_key">1d5db7dc9a809c73b9307fc6e63ff912</string>


    <string name="next">Next</string>
    <string name="keep_up_with_the_latest_nfootball_matches">Keep up with the latest\nfootball matches</string>
    <string name="only_current_data">Only current data</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_app">Share app</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="save_changes">Save changes</string>
    <string name="accept">Accept</string>
    <string name="rate_app">Rate app</string>
    <string name="delete_data">Delete data</string>
    <string name="delete_data2">Delete data?</string>
    <string name="all_data_will_be_lost">All data will be lost</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="click_on_allow_to_receive_notifications">Click on allow to receive notifications</string>
    <string name="block">Block</string>
    <string name="allow">Allow</string>
    <string name="matchboard">Matchboard</string>
    <string name="today">Today</string>
    <string name="match_score">Match score</string>
    <string name="name_mykola">Mykola</string>
    <string name="dash">-</string>
    <string name="share">Share</string>
    <string name="_0">0</string>
</resources>