<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog"
    android:orientation="vertical">

    <TextView
        style="@style/roboto_regular_22_text_body_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/notification" />

    <TextView
        style="@style/roboto_regular_14_text_secondary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/click_on_allow_to_receive_notifications" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/buttonBlock"
            style="@style/roboto_semiBold_18_text_white_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingEnd="12dp"
            android:paddingBottom="10dp"
            android:text="@string/block"
            android:textColor="@color/selector_button_1" />

        <TextView
            android:id="@+id/buttonAllow"
            style="@style/roboto_semiBold_18_text_white_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingEnd="12dp"
            android:paddingBottom="10dp"
            android:text="@string/allow"
            android:textColor="@color/selector_button_1" />

    </LinearLayout>
</LinearLayout>