<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_мain"
    tools:context=".activity.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/roboto_regular_22_text_body_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewAvatar"
                android:layout_width="116dp"
                android:layout_height="116dp"
                android:layout_marginTop="23dp"
                android:contentDescription="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/avatar_def" />

            <ImageView
                android:id="@+id/buttonEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-19dp"
                android:background="@drawable/selector_button_edit"
                android:contentDescription="@null"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewAvatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewName"
                style="@style/roboto_regular_22_text_body_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/name_mykola"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonEdit" />

            <LinearLayout
                android:id="@+id/linearL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="71dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewName">

                <LinearLayout
                    android:id="@+id/buttonNotification"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        app:srcCompat="@drawable/icon_notifivation" />

                    <TextView
                        style="@style/roboto_regular_16_text_body_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:text="@string/notification"
                        android:textAlignment="viewStart" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        app:srcCompat="@drawable/icon_arrow" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/layer3" />

                <LinearLayout
                    android:id="@+id/buttonPrivacyPolicy"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        app:srcCompat="@drawable/icon_privacy_policy" />

                    <TextView
                        style="@style/roboto_regular_16_text_body_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:text="@string/privacy_policy"
                        android:textAlignment="viewStart" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        app:srcCompat="@drawable/icon_arrow" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/layer3" />

                <LinearLayout
                    android:id="@+id/buttonShareApp"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        app:srcCompat="@drawable/icon_share" />

                    <TextView
                        style="@style/roboto_regular_16_text_body_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:text="@string/share_app"
                        android:textAlignment="viewStart" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        app:srcCompat="@drawable/icon_arrow" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/layer3" />

                <LinearLayout
                    android:id="@+id/buttonRateApp"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        app:srcCompat="@drawable/icon_notifivation" />

                    <TextView
                        style="@style/roboto_regular_16_text_body_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:text="@string/rate_app"
                        android:textAlignment="viewStart" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        app:srcCompat="@drawable/icon_arrow" />
                </LinearLayout>

                <View
                    android:id="@+id/line_1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/layer3" />
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonDeleteData"
                style="@style/button_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="162dp"
                android:layout_marginBottom="10dp"
                android:text="@string/delete_data"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearL" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <TableLayout
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingTop="12dp"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/buttonMatchUpcoming"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/button_upcoming_def" />

            <ImageView
                android:id="@+id/buttonMatchPast"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/button_past_def" />

            <ImageView
                android:id="@+id/buttonMatchSetting"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/button_setting_press" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>